--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,6 @@ Maintainer: Your Name <your@email.com>
 Description: One paragraph description of what the package does as one
         or more full sentences.
 License: GPL (>= 3)
-Imports:
+Imports: magrittr
 LinkingTo:
 RoxygenNote: 6.0.1
